[package]
name = "clocst"
version = "0.1.1"
edition = "2021"
description = "Code line counter with dust-style directory tree visualization"
license = "MIT"
repository = "https://github.com/linyanzhong/clocst"
readme = "README.md"
keywords = ["cloc", "lines-of-code", "tree", "cli", "code-stats"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["CLAUDE.md", "AGENTS.md", "assets/"]

[[bin]]
name = "clocst"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ignore = "0.4"
rayon = "1"
crossterm = "0.28"
unicode-width = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
